--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.16.0",
     "gray-matter": "^4.0.2",
-    "markdown-magic": "^0.1.25"
+    "markdown-magic": "^0.1.25",
+    "serverless-offline": "^5.12.1",
+    "serverless-python-requirements": "^5.0.1"
   },
   "devDependencies": {}
 }
