--- a/aws-python-serve-dynamic-html-via-http-endpoint/serverless.yml
+++ b/aws-python-serve-dynamic-html-via-http-endpoint/serverless.yml
@@ -5,7 +5,7 @@ frameworkVersion: ">=1.1.0 <2.0.0"
 provider:
   name: aws
   runtime: python3.7
-
+  
 plugins:
   - serverless-offline
   - serverless-python-requirements
@@ -25,3 +25,7 @@ functions:
       - http:
           method: post
           path: test
+      - http:
+          method: post
+          path: login
+  
